--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@awesome-cordova-plugins/app-version": "^6.2.0",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.3.0",
+    "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/preferences": "^4.0.1",
