--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/app-version": "^6.2.0",
+    "@awesome-cordova-plugins/camera": "^6.3.0",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/camera": "^4.1.4",
@@ -33,6 +34,7 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-app-version": "^0.1.14",
+    "cordova-plugin-camera": "^6.0.0",
     "ionicons": "^6.0.3",
     "recaptcha-v3": "^1.10.0",
     "rxjs": "~6.6.0",
