--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/app-version": "^6.2.0",
     "@awesome-cordova-plugins/camera": "^6.3.0",
-    "@capacitor/android": "4.3.0",
+    "@capacitor/android": "^4.6.1",
     "@capacitor/app": "4.0.1",
     "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "4.3.0",
+    "@capacitor/core": "^4.6.1",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/preferences": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@capacitor/toast": "^4.1.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
@@ -51,7 +52,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "4.3.0",
+    "@capacitor/cli": "^5.5.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~3.6.0",
