--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@angular/router": "^14.0.0",
     "@awesome-cordova-plugins/app-version": "^6.2.0",
     "@awesome-cordova-plugins/camera": "^6.3.0",
-    "@capacitor/android": "^4.6.1",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "^4.6.1",
-    "@capacitor/filesystem": "^4.1.4",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/preferences": "^4.0.1",
-    "@capacitor/status-bar": "4.0.1",
-    "@capacitor/toast": "^4.1.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/camera": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/filesystem": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/preferences": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/toast": "^5.0.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^3.0.6",
@@ -52,7 +52,7 @@
     "@angular/compiler": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
-    "@capacitor/cli": "^5.5.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.15",
     "@types/jasmine": "~3.6.0",
